# web-app

./: .env  Cargo.toml  Dockerfile  backup.rs  book.html  compose.yml  state.json
css/: base.css
deploy/: compose.yaml
javascript/: login.js  main.js
migrations/2022-11-06-111749_create_to_do_items/: up.sql
migrations/2022-11-09-141656_create_users/: up.sql
src/: database.rs  main.rs  processes.rs  state.rs
src/auth/: jwt.rs  mod.rs  token.rs
src/json_serialization/: login.rs  to_do_item.rs  to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/structs/traits/: mod.rs
src/views/: mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
src/views/auth/: login.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: login.html  logout.html  main.html
